This is a changelog for developers only, not for ordinary users.

02/02/2001
	- HTML dialog now correctly remembers the last settings
	- Added step add/remove commands

01/02/2001
	- Fixed a crash deselecting point lights

07/01/2001
        - Added a new command to create floating views of the project

05/01/2001
        - Added a new cross platform class for handling OpenGL windows
        - Added a new base window class for handling top level windows

02/01/2001
        - Linux PPC fixes - LeoCAD now works on big endian computers !
          Thanks to Lon Shapiro for allowing me to use his Mac for debugging.

30/12/2000
        - Added Step Insert and Step Delete commands.

29/12/2000
        - Capture mouse events while dragging the cursor under linux.
        - HTML Dialog improvements under linux.

28/12/2000
        - Click on "Last Step" goes to the last used step instead of step 255.
        - Save HTML dialog options.

24/12/2000
        - Fixed piece combo under linux.

20/12/2000
        - Fixed crash when saving pictures of multiple steps.

================================================================================
                                  Version 0.73
================================================================================

18/12/2000
	- Fixed win32 help file.

17/12/2000
	- Fixed win2k startup crash.

16/12/2000
        - Fixed AVI saving.
        - Fixed rotation bug.

15/12/2000
        - Fixed small bug in the texture font.

03/12/2000
        - Added Save Picture dialog to the linux version.
        - Added an overwrite prompt when saving a project under linux.

02/12/2000
        - Added project loading preview to the linux version.

24/11/2000
        - Renamed several functions from the Matrix class.
        - Added const to several functions.

23/11/2000
        - Now all object classes have a Select () function.

18/11/2000
        - Fixed animation playback under linux.